# axum-rest-api

./: .env  Cargo.toml
src/: db.rs  lid.rs  main.rs  responces.rs  services.rs  validate_json.rs
src/middlieware/: jwt_auth.rs
src/routes/: login_user.rs  mod.rs
src/structs/: common.rs  user.rs
