[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
async-trait = "0.1.72"
axum = "0.6.19"  # Update to the latest version of Axum
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }  # Update to a compatible version
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = { version = "2.6.0",default-features = false, features = ["bson-chrono-0_4", "zstd-compression", "snappy-compression", "zlib-compression","tokio-sync"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }  # Update to a compatible version

